fix(popup): correct the value of scrollbar-width

--- a/packages/varlet-ui/src/popup/popup.less
+++ b/packages/varlet-ui/src/popup/popup.less
@@ -69,7 +69,7 @@
   bottom: 0;
   left: 0;
   overflow: auto;
-  scrollbar-width: 0;
+  scrollbar-width: none;
 
   &__overlay {
     display: flex;
